traces/bug_316.txt
examples++-hpddm/hpddm_substructuring.cpp:308: error: DEAD_STORE
  The value written to &nu (type unsigned short) is never used.
Showing all 1 steps of the trace


examples++-hpddm/hpddm_substructuring.cpp:308:17: Write of unused value
306.           if(adaptive) {
307.               if(opt.set("geneo_nu"))
308.                   nu = opt["geneo_nu"];
                       ^
309.   #if defined(MUMPSSUB) || defined(PASTIXSUB) || defined(MKL_PARDISOSUB)
310.               t = MPI_Wtime();
